compiler/tests/success/x86-64/stack_length_neg.jazz
param int N = -1;

export fn main () -> reg u64 {
  stack u64[N] s;
  reg u64 res = 0;
  reg u64 i = 0;
  while (i <s N) {
    s[i] = i;
    res += s[i];
    i += 1;
  }
  return res;
}
