compiler/tests/fail/param_expansion/expression_global2.jazz
param int N = 2;
u64[(int)(64u)N] g = {1};
